Add snapshot tests